--- a/socialmedia/templates/socialmedia/home.html
+++ b/socialmedia/templates/socialmedia/home.html
@@ -4,7 +4,7 @@
   {% if user.is_not_authenticated %}
     <div class="position-relative overflow-hidden text-center text-light bg-dark">
       <div class="col-md-5 p-lg-5 mx-auto my-5 mt-0">
-        <h1 class="display-4 font-weight-normal text-light">Welcome to Spectrum!</h1>
+        <h1 class="display-4 font-weight-normal text-light">Welcome to BlogIt!</h1>
         <p class="lead font-weight-normal">Let the world know what you are thinking.</p>
         <a class="btn btn-primary" href="#">Sign Up Now!</a>
       </div>
