--- a/socialmedia/templates/socialmedia/base.html
+++ b/socialmedia/templates/socialmedia/base.html
@@ -82,7 +82,7 @@
               <a class="btn btn-primary" href="{% url 'post-create' %}">Add a New Post</a>
               {% else %}
               <div class="alert alert-info text-dark text-center" role="alert">
-               <h2> Welcome to <span style="font-family: 'Lobster', cursive;">Spectrum</span>!</h2>
+               <h2> Welcome to <span style="font-family: 'Lobster', cursive;">BlogIt</span>!</h2>
                <a class="btn btn-primary mt-2" href="">Sign Up Now</a>
               </div>
               
@@ -98,7 +98,7 @@
       <footer class="footer">
         <div class="bg-dark text-center" style="width: 100%;" >
           <span class="text-light">© 2020 Copyright : </span>
-          <a class="text-primary" href="{% url 'sm-home' %}">Spectrum.com</a>
+          <a class="text-primary" href="{% url 'sm-home' %}">BlogIt</a>
         </div>
       </footer>
       
